# Research-Workflow-Product

./: .gitattributes  .gitignore  README.md  backup.md  pyproject.toml
app/: __init__.py  cli.py  llm.py  main.py  repository.py  run_server.py  schemas.py  service.py  settings.py  skills.py  tracing.py  workflow.py
app/static/: app.js  index.html  styles.css
docs/: design-benchmark.md  scopeforge-foundation.md
tests/: conftest.py  test_api.py
